# Teotl-V4

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  STATUS_REPORT.md  index.html  package-lock.json  package.json  render-build.sh  render.yaml  screenshot.py  vitest.config.js
.github/workflows/: wasm-build.yml  web-build.yml
assets/: manifest.json
content/characters/: npcs.yaml
content/items/: items.yaml
content/quests/: quests.yaml
content/world/: locations.yaml
crates/: Cargo.toml  README.md
crates/teotl_core/: Cargo.toml
crates/teotl_core/src/: events.rs  ids.rs  lib.rs  math.rs  time.rs  types.rs
crates/teotl_engine/: Cargo.toml
crates/teotl_engine/src/: atmospheric.rs  engine.rs  lib.rs  nightmare.rs  scheduler.rs  state.rs
crates/teotl_game/: Cargo.toml
crates/teotl_game/src/: character.rs  lib.rs  systems.rs  world.rs
crates/teotl_wasm/: Cargo.toml  README.md
crates/teotl_wasm/src/: api.rs  commands.rs  lib.rs  utils.rs
docs/: AGENTS.md  ARCHITECTURE.md  ART_BIBLE.md  CHARACTERS.md  CONTENT_PIPELINE.md  ENGINE.md  ROADMAP.md  WORLD_BIBLE.md
docs/art/: SPLASHARTS.md
docs/design/: ATMOSPHERE_STATES.md  UI_HORROR_STATES.md
src/: main.js
src/__tests__/: atmospheric.test.js  audio.test.js  horror-ui.test.js  nightmare.jest.test.js  nightmare.test.js  wasm_host.test.js  wasm_host_error.test.js
src/engine/: atmospheric.js  audio.js  nightmare.js  wasm_host.js
src/styles/: main.css
src/ui/: horror-ui.js
tools/: README.md  gen-wasm-types.sh  pack-assets.sh  validate-assets.sh  validate-content.sh
web/: index.html  package-lock.json  package.json  take_screenshot.cjs  tsconfig.json  vite.config.ts
web/src/: env.d.ts  main.ts
web/src/__tests__/: world.test.js
web/src/engine/: atmospheric.ts  audio.ts  nightmare.test.ts  nightmare.ts  setup.ts  wasm-bridge.ts  world.test.ts  world.ts
web/src/engine/__tests__/: world.test.ts
web/src/styles/: horror.css  main.css  nightmare.css
web/src/types/: index.d.ts  teotl.d.ts
web/src/ui/: horror-ui.ts
