[workspace]
resolver = "2"
members = [
    "teotl_core",
    "teotl_engine",
    "teotl_game",
    "teotl_wasm",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Teotl V4 contributors"]
license     = "MIT"
repository  = "https://github.com/sistemascancunjefe-ai/Teotl-V4"

[workspace.dependencies]
# Shared dependency versions — pin here, reference with { workspace = true }
wasm-bindgen = "0.2"
js-sys       = "0.3"
web-sys      = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
