[package]
name        = "teotl_core"
description = "Core data types, math utilities, and shared primitives for Teotl V4"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
