[package]
name = "teotl_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data types, math utilities, and shared primitives for Teotl V4"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
