[package]
name = "teotl_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Atmospheric rendering engine and simulation kernels for Teotl V4"

[dependencies]
teotl_core = { path = "../teotl_core" }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
