[package]
name        = "teotl_game"
description = "Game logic, world state, character systems, and quest engine for Teotl V4"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
teotl_core   = { path = "../teotl_core" }
teotl_engine = { path = "../teotl_engine" }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
