[package]
name = "teotl_game"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Game logic, world state, character systems, and quest engine for Teotl V4"

[dependencies]
teotl_core   = { path = "../teotl_core" }
teotl_engine = { path = "../teotl_engine" }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
