[package]
name        = "teotl_wasm"
description = "WebAssembly bindings for Teotl V4 — exposes engine and game APIs to the TypeScript host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebAssembly bindings for Teotl V4 — exposes engine and game APIs to the TypeScript host"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
teotl_core = { path = "../teotl_core" }
teotl_engine = { path = "../teotl_engine" }
teotl_game = { path = "../teotl_game" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
